--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>My Apps</span></a>
+						<a href="#myapps" class="icon solid fa-folder"><span>My Apps</span></a>
 						<!-- <a href="#contact" class="icon solid fa-envelope"><span>Contact Me</span></a> -->
 						<a href="#Blog" class="icon solid fa-digital-tachograph"><span>Blog</span></a>
 						<a href="https://github.com/xyzchris0" class="icon brands solid fa-github"><span>GitHub</span></a>
@@ -33,14 +33,14 @@
 									<p>Security Engineer</p>
 									<p2>Add something Cool here</p2>
 								</header>
-								<a href="#work" class="jumplink pic">
+								<a href="#myapps" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 									<img src="images/image.jpg" alt="" />
 								</a>
 							</article>
 
 						<!-- Work -->
-							<article id="work" class="panel">
+							<article id="myapps" class="panel">
 								<header>
 									<h2>Deployed Apps</h2>
 								</header>
@@ -55,13 +55,13 @@
 												<a href="https://goremotecybersecurity.com/" class="image fit"><img src="images/image2.jpg" alt=""></a>
 											<figcaption>(G)o(R)mote(C)ybersecurity</figcaption></figure>
 										</div>
-										<div class="col-4 col-6-medium col-12-small">
+										<!-- <div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
 										</div>
-										<!-- <div class="col-4 col-6-medium col-12-small">
+										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
@@ -97,19 +97,21 @@
 							<h2>Blog</h2>
 						</header>
 						<p>
-							Checkout what I am working on.
+							What's on my mind.
 						</p>
 						<section>
 							<div class="row">
 								<div class="col-4 col-6-medium col-12-small">
-									<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+									<figure class="image fit">
+										<a href="https://dev.to/xyzchris0" class="image fit"><img src="images/hacking.jpg" alt=""></a>
+									<figcaption>CTF WriteUps</figcaption></figure>
 								</div>
-								<div class="col-4 col-6-medium col-12-small">
+								<!-- <div class="col-4 col-6-medium col-12-small">
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
 								</div>
 								<div class="col-4 col-6-medium col-12-small">
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-								</div>							
+								</div> -->							
 								
 							</div>
 						</section>
